container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      volumes:
      - name: pvc1
        persistentVolumeClaim:
          claimName: test
      containers:
        - name: demo
          image: adikarthik/demo
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: "300Mi"
              cpu: "500m"
            limits:
              memory: "600Mi"
              cpu: "800m"
          readinessProbe:
            tcpSocket:
              port: 9090
            periodSeconds: 50
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /demo1/api/v1/projects
              port: 9090
            periodSeconds: 100
            failureThreshold: 3
